<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CIFS Documents Provider</string>
    <string name="app_summary">Access the shared folder.</string>
    <string name="dialog_accept">OK</string>
    <string name="dialog_close">Close</string>

    <!-- Main Screen -->
    <string name="main_open_file">Open</string>
    <string name="main_open_settings">Settings</string>
    <string name="main_open_file_ng_message">Add any connection.</string>
    <string name="main_add_connection_a11y">Add</string>

    <!-- Edit Screen -->
    <string name="edit_title">Connection</string>
    <string name="edit_name_title">Name</string>
    <string name="edit_name_hint">Host name if empty</string>
    <string name="edit_domain_title">Domain</string>
    <string name="edit_domain_hint">Input as needed</string>
    <string name="edit_host_title">Host</string>
    <string name="edit_host_hint">IP Address / Host</string>
    <string name="edit_host_select_a11y">Browse</string>
    <string name="edit_port_title">Port</string>
    <string name="edit_port_hint">Default if empty</string>
    <string name="edit_enable_dfs_label">Enable DFS (Distributed File System)</string>
    <string name="edit_folder_title">Folder</string>
    <string name="edit_folder_hint">\'/\' if empty</string>
    <string name="edit_directory_search_a11y">Browse</string>
    <string name="edit_user_title">User</string>
    <string name="edit_user_hint">Invalid if anonymous</string>
    <string name="edit_password_title">Password</string>
    <string name="edit_password_hint">Invalid if anonymous</string>
    <string name="edit_anonymous_label">Anonymous</string>
    <string name="edit_option_title">Option</string>
    <string name="edit_option_extension_label">Add extension when saving</string>
    <string name="edit_option_safe_transfer_label">Safe data transfer</string>
    <string name="edit_connection_uri_title">SMB URI</string>
    <string name="edit_provider_uri_title">Shared URI</string>
    <string name="edit_check_connection_button">Check connection</string>
    <string name="edit_check_connection_ok_message">Connection successful.</string>
    <string name="edit_check_connection_wn_message">Settings has an error.</string>
    <string name="edit_check_connection_ng_message">Connection failed.</string>
    <string name="edit_save_ng_message">Input the host.</string>
    <string name="edit_save_duplicate_message">URI duplicated.</string>
    <string name="edit_save_button">Save</string>
    <string name="edit_delete_button">Delete</string>
    <string name="edit_back_confirmation_message">Discard your changes?</string>
    <string name="edit_delete_confirmation_message">Delete this settings?</string>

    <!-- Host Screen -->
    <string name="host_title">Host</string>
    <string name="host_set_manually">Set manually</string>
    <string name="host_select_confirmation_message">Input selected data to edit form.</string>
    <string name="host_select_host_name">Host Name</string>
    <string name="host_select_ip_address">IP Address</string>
    <string name="host_sort_button">Sort</string>
    <string name="host_reload_button">Reload</string>
    <string name="host_sort_type_detection_ascend">Detection (Ascend)</string>
    <string name="host_sort_type_detection_descend">Detection (Descend)</string>
    <string name="host_sort_type_host_name_ascend">Host Name (Ascend)</string>
    <string name="host_sort_type_host_name_descend">Host Name (Descend)</string>
    <string name="host_sort_type_ip_address_ascend">IP Address (Ascend)</string>
    <string name="host_sort_type_ip_address_descend">IP Address (Descend)</string>
    <string name="host_error_network">@string/provider_error_message</string>

    <!-- Folder Screen -->
    <string name="folder_title">Folder</string>
    <string name="folder_set">Set Folder</string>
    <string name="folder_reload_button">Reload</string>
    <string name="folder_list_empty">No sub folders</string>

    <!-- Settings Screen -->
    <string name="settings_title">Settings</string>

    <!-- Send Screen -->
    <string name="send_title">File Transfer</string>
    <string name="send_close_button">Close</string>
    <string name="send_action_cancel">Cancel</string>
    <string name="send_action_retry">Retry</string>
    <string name="send_action_remove">Remove</string>
    <string name="send_state_ready">Ready</string>
    <string name="send_state_overwrite">File exists</string>
    <string name="send_state_success">Success</string>
    <string name="send_state_failure">Failure</string>
    <string name="send_state_cancel">Cancelled</string>
    <string name="send_exit_confirmation_message">Cancel all transfers and exit the app.</string>
    <string name="send_overwrite_confirmation_message">Overwrite %1$d files.</string>

    <!-- DocumentsProvider -->
    <string name="provider_error_message">An error was occurred.</string>

    <!-- Notification -->
    <string name="notification_channel_name_send">Data Transfer</string>
    <string name="notification_title_send_completed">Completed</string>

    <!-- Theme Enum -->
    <string name="enum_theme_default">Default</string>
    <string name="enum_theme_light">Light</string>
    <string name="enum_theme_dark">Dark</string>

</resources>
