<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/host_menu_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/host_reload_button"
        app:showAsAction="ifRoom"
        >
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/host_menu_sort_type_detection_ascend"
                    android:title="@string/host_sort_type_detection_ascend" />
                <item android:id="@+id/host_menu_sort_type_detection_descend"
                    android:title="@string/host_sort_type_detection_descend" />
                <item android:id="@+id/host_menu_sort_type_host_name_ascend"
                    android:title="@string/host_sort_type_host_name_ascend" />
                <item android:id="@+id/host_menu_sort_type_host_name_descend"
                    android:title="@string/host_sort_type_host_name_descend" />
                <item android:id="@+id/host_menu_sort_type_ip_address_ascend"
                    android:title="@string/host_sort_type_ip_address_ascend" />
                <item android:id="@+id/host_menu_sort_type_ip_address_descend"
                    android:title="@string/host_sort_type_ip_address_descend" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/host_menu_reload"
        android:icon="@drawable/ic_reload"
        android:title="@string/host_reload_button"
        app:showAsAction="always"
        />

</menu>
